--- a/index.html
+++ b/index.html
@@ -11,48 +11,24 @@
       color: #fff;
       margin: 0;
       padding: 1rem;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
 
     img {
       max-width: 100%;
       height: auto;
-      display: block;
-      margin: 1rem auto;
-      border-radius: 8px;
-    }
-
-    .caption {
-      font-size: 1.1rem;
-      margin-top: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <img src="https://i.postimg.cc/QtZ1qqpc/Screenshot-20250627-055343-Docs-1.png"
-         alt="A stylized poem in white text on a black background expressing grief, solitude, and hope." />
-
-    <div class="caption">
-      <p>
-        I can no longer remember his laughter, nor his smile, only distant echoes of brighter days, when joy felt like home.
-        Now, pain is my constant companion, and regret clings like a shadow.
-        I carry my burdens alone, and perhaps that solitude is earned.
-        Still, I whisper a hope into the silence, that someday, peace will find me, and I will learn to love myself again.
-      </p>
-      <p>
-        But I’ve grown too used to walking away, leaving people behind, along with pieces of me, until all that remains is a hollow shell,
-        a ghost draped in shame, a demon without a name.
-      </p>
-    </div>
-  </div>
+  <img src="https://i.postimg.cc/QtZ1qqpc/Screenshot-20250627-055343-Docs-1.png"
+       alt="Poetic text expressing grief, solitude, and hope. Contains white text on a black background about loss and walking away." />
 
 </body>
 </html>
